Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoAnnotationMethods.out
NoAnnotationMethods.java:10:9: compiler.err.intf.annotation.member.clash: annotationType(), java.lang.annotation.Annotation
1 error
